Добавил 3 новых страницы: news, bonus и prognoz

--- a/app/index.html
+++ b/app/index.html
@@ -3588,7 +3588,7 @@
 
 	<div class="mask"></div>
 
-	<!-- Slick -->
+	<!-- Glider -->
 	<script src="./js/include/glider.min.js"></script>
 
 	<!-- Custom JS -->
