Добавил страницу infopage

--- a/app/obzory.html
+++ b/app/obzory.html
@@ -9,11 +9,9 @@
   <!-- Bootstrap Grid -->
   <link rel="stylesheet" href="./css/include/bootstrap-grid.min.css">
 
-  <!-- glider -->
-  <link rel="stylesheet" href="./css/include/glider.min.css">
-
   <!-- Styles -->
   <link rel="stylesheet" href="./css/app.min.css">
+  <link rel="stylesheet" href="./css/obzory.css">
   <title>Title</title>
 </head>
 
