--- a/app/bonus.html
+++ b/app/bonus.html
@@ -14,6 +14,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="./css/app.min.css">
+  <link rel="stylesheet" href="./css/bonus.css">
   <title>Title</title>
 </head>
 
