--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="./css/app.min.css">
+	<link rel="stylesheet" href="./css/index.css">
 	<title>Title</title>
 </head>
 
