--- a/app/infopage.html
+++ b/app/infopage.html
@@ -12,6 +12,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="./css/app.min.css">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./css/infopage.css">
   <title>Title</title>
 </head>
 
