Добавил мобильную навигацию

--- a/app/books2.html
+++ b/app/books2.html
@@ -2180,6 +2180,43 @@
 
   <div class="mask"></div>
 
+  <!-- Mobile nav -->
+  <nav class="mobile__nav">
+    <div class="mobile__nav__wrapper">
+      <a href="#" class="mobile__nav__link">
+        <img src="./images/dest/header/star.svg" alt="star" class="mobile__nav__icon">
+        <span class="mobile__nav__text">
+          Рейтинг
+        </span>
+      </a>
+      <a href="#" class="mobile__nav__link">
+        <img src="./images/dest/header/prognosis.svg" alt="prognosis" class="mobile__nav__icon">
+        <span class="mobile__nav__text">
+          Прогнозы
+        </span>
+      </a>
+      <a href="#" class="mobile__nav__link">
+        <img src="./images/dest/header/cup.svg" alt="cup" class="mobile__nav__icon">
+        <span class="mobile__nav__text">
+          Школа
+        </span>
+      </a>
+      <a href="#" class="mobile__nav__link">
+        <img src="./images/dest/header/service.svg" alt="service" class="mobile__nav__icon">
+        <span class="mobile__nav__text">
+          Сервисы
+        </span>
+      </a>
+      <a href="#" class="mobile__nav__link" id="mobileMenuBtn">
+        <img src="./images/dest/header/menu.svg" alt="menu" class="mobile__nav__icon">
+        <span class="mobile__nav__text">
+          Меню
+        </span>
+      </a>
+    </div>
+  </nav>
+  <!-- Mobile nav END -->
+
   <!-- Custom JS -->
   <script src="./js/app.min.js"></script>
 </body>
