Добавил сайдбар меню

--- a/app/news.html
+++ b/app/news.html
@@ -958,9 +958,128 @@
       <div class="container">
         <div class="row whole__wrapper">
 
-          <div class="whole__left col-3">
+          <div class="whole__left col-lg-3 col-12">
 
-            <section class="sidebar official">
+            <section class="sidebar menu">
+
+              <div class="sidebar__head">
+                <h2 class="sidebar__title">
+                  Меню
+                </h2>
+
+                <span class="menu__item__arrow no-xl md"></span>
+              </div>
+
+              <div class="sidebar__body">
+
+                <nav class="menu__wrapper">
+                  <div class="menu__wrapper">
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </nav>
+
+              </div>
+            </section>
+
+            <section class="sidebar official no-md">
 
               <div class="sidebar__head">
                 <h2 class="sidebar__title">
@@ -1019,7 +1138,7 @@
 
             </section>
 
-            <section class="sidebar forecast">
+            <section class="sidebar forecast no-md">
 
               <div class="sidebar__head">
                 <h2 class="sidebar__title">
