Перенес меню под хлебные крошки

--- a/app/news.html
+++ b/app/news.html
@@ -1224,6 +1224,125 @@
               </div>
             </div>
 
+            <section class="sidebar menu no-xl md" id="menu">
+
+              <div class="sidebar__head">
+                <h2 class="sidebar__title">
+                  Меню
+                </h2>
+
+                <span class="menu__item__arrow no-xl md"></span>
+              </div>
+
+              <div class="sidebar__body">
+
+                <nav class="menu__wrapper">
+                  <div class="menu__wrapper">
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__item__head">
+                        <span class="menu__item__text">
+                          Лицензия
+                        </span>
+
+                        <span class="menu__item__arrow"></span>
+                      </div>
+
+
+                      <div class="menu__item__list">
+                        <a href="#" class="menu__item__link">
+                          Надежные букмекеры
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Новые БК
+                        </a>
+
+                        <a href="#" class="menu__item__link">
+                          Легальные
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </nav>
+
+              </div>
+            </section>
+
             <section class="news">
               <div class="news__wrapper">
                 <picture decoding="async">
