--- a/app/news.html
+++ b/app/news.html
@@ -1079,7 +1079,7 @@
               </div>
             </section>
 
-            <section class="sidebar official no-md">
+            <section class="sidebar official">
 
               <div class="sidebar__head">
                 <h2 class="sidebar__title">
@@ -1138,7 +1138,7 @@
 
             </section>
 
-            <section class="sidebar forecast no-md">
+            <section class="sidebar forecast">
 
               <div class="sidebar__head">
                 <h2 class="sidebar__title">
