Начал делать интро блок для app.html

--- a/app/index.html
+++ b/app/index.html
@@ -1030,7 +1030,7 @@
 								<div class="best__table__line__wrapper">
 									<div class="best__table__item best__table__item--bukmeker">
 										<div class=" best__table__item__wrapper">
-											<img loading="lazy" src="./images/dest/index/1x.svg" alt="1x">
+											<img class="best__table__item__img" loading="lazy" src="./images/dest/index/1x.svg" alt="1x">
 										</div>
 									</div>
 
@@ -1493,7 +1493,8 @@
 								<div class="best__table__line__wrapper">
 									<div class="best__table__item best__table__item--bukmeker">
 										<div class=" best__table__item__wrapper">
-											<img loading="lazy" src="./images/dest/index/1x.svg" alt="1x">
+											<img height="2" class="best__table__item__img" loading="lazy" src="./images/dest/index/1x.svg"
+												alt="1x">
 										</div>
 									</div>
 
