Закончил страницу app.html

--- a/app/app.html
+++ b/app/app.html
@@ -1117,26 +1117,32 @@
                   </h2>
                 </div>
 
+
                 <div class="app__intro__body">
-                  <div class="app__tags">
-                    <a href="#" class="app__tags__item">
-                      Обзор
-                    </a>
-                    <a href="#" class="app__tags__item">
-                      Регистрация
-                    </a>
-                    <a href="#" class="app__tags__item">
-                      Приложение на iOS
-                    </a>
-                    <a href="#" class="app__tags__item">
-                      Приложение на Android
-                    </a>
-                    <a href="#" class="app__tags__item">
-                      Моб. версия
-                    </a>
-                    <a href="#" class="app__tags__item">
-                      Бонусы
-                    </a>
+                  <div class="app__tags__block">
+                    <span class="app__tags__blure no-xl xs"></span>
+                    <div class="app__tags">
+                      <div class="app__tags__wrapper">
+                        <a href="#" class="app__tags__item">
+                          Обзор
+                        </a>
+                        <a href="#" class="app__tags__item">
+                          Регистрация
+                        </a>
+                        <a href="#" class="app__tags__item">
+                          Приложение на iOS
+                        </a>
+                        <a href="#" class="app__tags__item">
+                          Приложение на Android
+                        </a>
+                        <a href="#" class="app__tags__item">
+                          Моб. версия
+                        </a>
+                        <a href="#" class="app__tags__item">
+                          Бонусы
+                        </a>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="app__stats">
@@ -1320,50 +1326,78 @@
                     </ul>
 
 
-                    <picture decoding="async">
-                      <source type="image/webp" srcset="./images/dest/app/app__phones.webp">
-                      <img loading="lazy" alt="phones" class="app__intro__phones"
-                        src="./images/dest/app/app__phones.png">
-                    </picture>
+                    <div class="app__intro__phones__block">
+                      <div class="app__intro__phones">
+
+                        <div class="app__intro__phones__wrapper">
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/phone__1.webp">
+                            <img width="113" height="242" loading="lazy" alt="phone" class="app__intro__phones__item"
+                              src="./images/dest/app/phone__1.png">
+                          </picture>
+
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/phone__2.webp">
+                            <img width="113" height="242" loading="lazy" alt="phone" class="app__intro__phones__item"
+                              src="./images/dest/app/phone__2.png">
+                          </picture>
+
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/phone__3.webp">
+                            <img width="113" height="242" loading="lazy" alt="phone" class="app__intro__phones__item"
+                              src="./images/dest/app/phone__3.png">
+                          </picture>
+                        </div>
+
+                      </div>
+
+                      <span class="app__intro__phones__fade no-xl xs"></span>
+                    </div>
+
+
+
 
                   </div>
 
                 </div>
 
                 <div class="app__intro__info">
-                  <div class="infopage__banner__number">
-                    <img loading="lazy" src="./images/dest/infopage/banner__number.svg" alt="1"
-                      class="infopage__banner__number__img">
-                    <span>
-                      <span class="infopage__banner__number__line">Место в списке </span>
-                      online bookmakers
-                    </span>
-                  </div>
-
-                  <span class="app__intro__info__line"></span>
-
-                  <div class="infopage__banner__reviews no-xs">
-                    <div class="infopage__banner__reviews__list">
-                      <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
-                      <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
-                      <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
-                      <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
-                      <span class="infopage__banner__reviews__item"></span>
+                  <div class="app__intro__info__wrapper">
+                    <div class="infopage__banner__number">
+                      <img loading="lazy" src="./images/dest/infopage/banner__number.svg" alt="1"
+                        class="infopage__banner__number__img">
+                      <span>
+                        <span class="infopage__banner__number__line">Место в списке </span>
+                        online bookmakers
+                      </span>
                     </div>
-                    <strong>4.2</strong> / 123 отзывов
+
+                    <span class="app__intro__info__line"></span>
+
+                    <div class="infopage__banner__reviews">
+                      <div class="infopage__banner__reviews__list">
+                        <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
+                        <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
+                        <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
+                        <span class="infopage__banner__reviews__item infopage__banner__reviews__item--active"></span>
+                        <span class="infopage__banner__reviews__item"></span>
+                      </div>
+                      <strong>4.2</strong> / 123 отзывов
+                    </div>
+
+                    <span class="app__intro__info__line"></span>
+
+
+                    <div class="infopage__banner__number">
+                      <img loading="lazy" src="./images/dest/infopage/banner__present.svg" alt="present"
+                        class="infopage__banner__number__img">
+                      <span>
+                        <strong class="infopage__banner__number__line">1 000 000 ₽</strong>
+                        Бонус за регистрацию
+                      </span>
+                    </div>
                   </div>
 
-                  <span class="app__intro__info__line"></span>
-
-
-                  <div class="infopage__banner__number">
-                    <img loading="lazy" src="./images/dest/infopage/banner__present.svg" alt="present"
-                      class="infopage__banner__number__img">
-                    <span>
-                      <strong class="infopage__banner__number__line">1 000 000 ₽</strong>
-                      Бонус за регистрацию
-                    </span>
-                  </div>
                 </div>
 
                 <button type="button" class="app__all">
@@ -1418,19 +1452,19 @@
                   </div>
                   <ul class="app__benefits__list">
                     <li class="app__benefits__item">
-                      Широкая линия с вариативной росписью
+                      Нет приветсвенного бонуса
                     </li>
 
                     <li class="app__benefits__item">
-                      Высокий урвоень коэффициентов
+                      Верификация банковской карты (10 дней)
                     </li>
 
                     <li class="app__benefits__item">
-                      Регулярыне предложения линии с нулевой маржей
+                      Отсутствие системы самоограничений
                     </li>
 
                     <li class="app__benefits__item">
-                      Наличие функии VIP-ставки
+                      Нет ТВ-трансляций
                     </li>
 
                     <li class="app__benefits__item">
@@ -1662,50 +1696,58 @@
                   ПРИЛОЖЕНИЯ ANDROID ДРУГИХ БК
                 </h2>
               </div>
+
               <div class="app__partners__body">
-                <div class="app__partners__list">
-                  <a href="#" class="app__partners__item">
-                    <div class="app__partners__img__wrapper">
-                      <picture decoding="async">
-                        <source type="image/webp" srcset="./images/dest/app/partners/1.webp">
-                        <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/1.png" alt="logo"
-                          class="app__partners__img">
-                      </picture>
+                <div class="app__partners__inner">
+                  <span class="no-xl md app__parners__fade"></span>
+                  <div class="app__partners__list__wrapper">
+                    <div class="app__partners__list">
+                      <a href="#" class="app__partners__item">
+                        <div class="app__partners__img__wrapper">
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/partners/1.webp">
+                            <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/1.png"
+                              alt="logo" class="app__partners__img">
+                          </picture>
+                        </div>
+
+                        <h4 class="app__partners__item__title">
+                          Приложение на Android Олимп
+                        </h4>
+                      </a>
+
+                      <a href="#" class="app__partners__item">
+                        <div class="app__partners__img__wrapper">
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/partners/2.webp">
+                            <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/2.png"
+                              alt="logo" class="app__partners__img">
+                          </picture>
+                        </div>
+
+                        <h4 class="app__partners__item__title">
+                          Приложение на Android Леон
+                        </h4>
+                      </a>
+
+                      <a href="#" class="app__partners__item">
+                        <div class="app__partners__img__wrapper">
+                          <picture decoding="async">
+                            <source type="image/webp" srcset="./images/dest/app/partners/3.webp">
+                            <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/3.png"
+                              alt="logo" class="app__partners__img">
+                          </picture>
+                        </div>
+
+                        <h4 class="app__partners__item__title">
+                          Приложение на Android Мелбет
+                        </h4>
+                      </a>
                     </div>
+                  </div>
 
-                    <h4 class="app__partners__item__title">
-                      Приложение на Android Олимп
-                    </h4>
-                  </a>
-
-                  <a href="#" class="app__partners__item">
-                    <div class="app__partners__img__wrapper">
-                      <picture decoding="async">
-                        <source type="image/webp" srcset="./images/dest/app/partners/2.webp">
-                        <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/2.png" alt="logo"
-                          class="app__partners__img">
-                      </picture>
-                    </div>
-
-                    <h4 class="app__partners__item__title">
-                      Приложение на Android Леон
-                    </h4>
-                  </a>
-
-                  <a href="#" class="app__partners__item">
-                    <div class="app__partners__img__wrapper">
-                      <picture decoding="async">
-                        <source type="image/webp" srcset="./images/dest/app/partners/3.webp">
-                        <img width="259" height="173" loading="lazy" src="./images/dest/app/partners/3.png" alt="logo"
-                          class="app__partners__img">
-                      </picture>
-                    </div>
-
-                    <h4 class="app__partners__item__title">
-                      Приложение на Android Мелбет
-                    </h4>
-                  </a>
                 </div>
+
               </div>
             </section>
 
