Добавил логику для dropdown

--- a/app/bonus2.html
+++ b/app/bonus2.html
@@ -1113,57 +1113,125 @@
 
               <div class="bonus__sort">
                 <div class="bonus__sort__wrapper">
-                  <button class="bonus__sort__item">
-                    <span class="bonus__sort__text">
-                      По типу бонуса
-                    </span>
-                    <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
-                      class="bonus__sort__icon">
+                  <button class="bonus__sort__item bonus__sort__item--dropdown">
+                    <div class="bonus__sort__item__wrapper">
+                      <span class="bonus__sort__text">
+                        По типу бонуса
+                      </span>
+                      <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
+                        class="bonus__sort__icon">
+                    </div>
+
+
+                    <ul class="bonus__sort__menu">
+                      <li class="bonus__sort__menu__item">
+                        Значение 1
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 2
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 3
+                      </li>
+                    </ul>
                   </button>
 
-                  <button class="bonus__sort__item">
-                    <span class="bonus__sort__text">
-                      По букмекеру
-                    </span>
-                    <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
-                      class="bonus__sort__icon">
+                  <button class="bonus__sort__item bonus__sort__item--dropdown">
+                    <div class="bonus__sort__item__wrapper">
+                      <span class="bonus__sort__text">
+                        Подборки
+                      </span>
+                      <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
+                        class="bonus__sort__icon">
+                    </div>
+
+
+                    <ul class="bonus__sort__menu">
+                      <li class="bonus__sort__menu__item">
+                        Значение 1
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 2
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 3
+                      </li>
+                    </ul>
                   </button>
 
-                  <button class="bonus__sort__item">
-                    <span class="bonus__sort__text">
-                      Подборки
-                    </span>
-                    <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
-                      class="bonus__sort__icon">
+                  <button class="bonus__sort__item bonus__sort__item--dropdown">
+                    <div class="bonus__sort__item__wrapper">
+                      <span class="bonus__sort__text">
+                        По букмекеру
+                      </span>
+                      <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
+                        class="bonus__sort__icon">
+                    </div>
+
+
+                    <ul class="bonus__sort__menu">
+                      <li class="bonus__sort__menu__item">
+                        Значение 1
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 2
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 3
+                      </li>
+                    </ul>
                   </button>
 
-                  <button class="bonus__sort__item">
-                    <span class="bonus__sort__text">
-                      Подборки
-                    </span>
-                    <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
-                      class="bonus__sort__icon">
+                  <button class="bonus__sort__item bonus__sort__item--dropdown">
+                    <div class="bonus__sort__item__wrapper">
+                      <span class="bonus__sort__text">
+                        Подборки
+                      </span>
+                      <img width="8" height="14" src="./images/dest/bonus/sort__arrow.svg" alt="arrow"
+                        class="bonus__sort__icon">
+                    </div>
+
+
+                    <ul class="bonus__sort__menu">
+                      <li class="bonus__sort__menu__item">
+                        Значение 1
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 2
+                      </li>
+
+                      <li class="bonus__sort__menu__item">
+                        Значение 3
+                      </li>
+                    </ul>
                   </button>
 
-                  <a href="#" class="bonus__sort__item">
+                  <a href="#" class="bonus__sort__item bonus__sort__item--link">
                     <span class="bonus__sort__text">
                       На главную
                     </span>
                   </a>
 
-                  <a href="#" class="bonus__sort__item">
+                  <a href="#" class="bonus__sort__item bonus__sort__item--link">
                     <span class="bonus__sort__text">
                       Бонусы дня
                     </span>
                   </a>
 
-                  <a href="#" class="bonus__sort__item">
+                  <a href="#" class="bonus__sort__item bonus__sort__item--link">
                     <span class="bonus__sort__text">
                       Истекающие бонусы
                     </span>
                   </a>
 
-                  <a href="#" class="bonus__sort__item">
+                  <a href="#" class="bonus__sort__item bonus__sort__item--link">
                     <span class="bonus__sort__text">
                       Лучшие бонусы
                     </span>
